--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
+    "@tailwindcss/vite": "^4.0.0-alpha.15",
     "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
     "axios": "^1.6.8",
     "element-plus": "^2.7.3",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.0.0-alpha.15",
     "vue": "^3.3.4",
     "vue-router": "^4.3.2"
   },
