--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
     "axios": "^1.6.8",
     "element-plus": "^2.7.3",
+    "rxjs": "^7.8.1",
     "tailwindcss": "^4.0.0-alpha.15",
     "vue": "^3.3.4",
     "vue-router": "^4.3.2"
