--- a/package.json
+++ b/package.json
@@ -7,23 +7,19 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri dev"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
-    "@tailwindcss/vite": "^4.0.0-alpha.15",
-    "@tauri-apps/api": ">=2.0.0-beta.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
-    "axios": "^1.6.8",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-shell": "^2",
     "element-plus": "^2.7.3",
-    "rxjs": "^7.8.1",
-    "tailwindcss": "^4.0.0-alpha.15",
     "vue": "^3.3.4",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@tauri-apps/cli": ">=2.0.0-beta.0",
+    "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.0.4",
     "internal-ip": "^7.0.0",
     "scss": "^0.2.4",
