--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -5,4 +5,11 @@ edition = "2021"
 
 [dependencies]
 axum="0.5.17"
-tokio = { version = "1", features = ["macros","rt-multi-thread"] }
+#tokio = { version = "1", features = ["macros","rt-multi-thread"] }
+
+tokio = { workspace = true, features = ["full"] }
+#async-trait = "0.1"
+#futures = { workspace = true }
+#libp2p = { path = "../../libp2p", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
+#tracing = { workspace = true }
+#tracing-subscriber = { workspace = true, features = ["env-filter"] }
