--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri dev"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
     "@tauri-apps/api": "^2",
@@ -25,6 +26,8 @@
     "scss": "^0.2.4",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
-    "vue-tsc": "^1.8.5"
+    "vite-plugin-windicss": "^1.9.4",
+    "vue-tsc": "^1.8.5",
+    "windicss": "^3.5.6"
   }
 }
