--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@heroicons/vue": "^2.1.3",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
+    "@vueuse/integrations": "^12.0.0",
+    "axios": "^1.7.9",
     "element-plus": "^2.7.3",
+    "universal-cookie": "^7.2.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
