--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@vueuse/integrations": "^12.0.0",
     "axios": "^1.7.9",
     "element-plus": "^2.7.3",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.3.0",
     "universal-cookie": "^7.2.2",
     "vue": "^3.3.4",
     "vue-router": "^4.3.2",
