将数据库连接交给 tauri 的 manage 管理使用

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,4 +21,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
 handle = { path = "../handle" }
+sea-orm = { version = "1.1.0"}
 
