--- a/handle/Cargo.toml
+++ b/handle/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 entity = { path = "../entity" }
 migration = { path = "../migration" }
+tauri = { version = "2"}
