--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/vue": "^2.1.3",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
+    "@vueuse/core": "^12.0.0",
     "@vueuse/integrations": "^12.0.0",
     "axios": "^1.7.9",
     "element-plus": "^2.7.3",
