--- a/handle/Cargo.toml
+++ b/handle/Cargo.toml
@@ -12,3 +12,5 @@ serde_json = "1"
 entity = { path = "../entity" }
 migration = { path = "../migration" }
 tauri = { version = "2"}
+jsonwebtoken = "8.3.0"
+chrono = "0.4.24"
