--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,8 @@ tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1", features = ["full"] }
+#tokio = { version = "1", features = ["full"] }
 handle = { path = "../handle" }
 sea-orm = { version = "1.1.0"}
-
+log = "0.4.22"
+anyhow = {workspace = true}
