--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@heroicons/vue": "^2.2.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
+    "@visactor/vtable-editors": "^1.14.1",
+    "@visactor/vue-vtable": "^1.14.1",
     "@vueuse/core": "^12.0.0",
     "@vueuse/integrations": "^12.0.0",
     "axios": "^1.7.9",
