修改前端tab栏

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vueuse/integrations": "^12.0.0",
     "axios": "^1.7.9",
     "element-plus": "^2.9.1",
+    "gsap": "^3.12.7",
     "nprogress": "^0.2.0",
     "pinia": "^2.3.0",
     "universal-cookie": "^7.2.2",
@@ -32,6 +33,7 @@
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.2.1",
     "internal-ip": "^7.0.0",
+    "sass-embedded": "^1.83.4",
     "scss": "^0.2.4",
     "typescript": "^5.7.2",
     "vite": "^6.0.3",
