--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -17,6 +17,8 @@ tower = { version = "0.4", features = ["util", "filter"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
+tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit", "catch-panic"] }
+http-body-util = "0.1"
 
 
 
